--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,9 +24,6 @@
     <link rel="stylesheet" th:href="@{/plugins/daterangepicker/daterangepicker-bs3.css}">
     <!-- bootstrap wysihtml5 - text editor -->
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css}">
-    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
-    <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
@@ -37,50 +34,24 @@
         <!-- Left navbar links -->
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" data-widget="pushmenu" href="#"><i class="fa fa-bars"></i></a>
+                <a class="nav-link" data-widget="pushmenu" href="#">
+                    <i class="fa fa-bars"></i>
+                </a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
                 <a href="/index" class="nav-link">主页</a>
             </li>
-<!--            <li class="nav-item d-none d-sm-inline-block">-->
-<!--                <div th:replace="model/topper :: topper-user"></div>-->
-<!--            </li>-->
         </ul>
-        <!-- SEARCH FORM -->
-<!--        <form class="form-inline ml-3">-->
-<!--            <div class="input-group input-group-sm">-->
-<!--                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">-->
-<!--                <div class="input-group-append">-->
-<!--                    <button class="btn btn-navbar" type="submit">-->
-<!--                        <i class="fa fa-search"></i>-->
-<!--                    </button>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </form>-->
         <!-- Right navbar links -->
         <ul class="navbar-nav ml-auto">
             <!-- Messages Dropdown Menu -->
-<!--            <div th:replace="model/topper :: topper-user"></div>-->
             <div th:replace="model/topper :: topper-info"></div>
             <!-- Notifications Dropdown Menu -->
             <div th:replace="model/topper :: topper-notice"></div>
-            <li class="nav-item">
-                <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#"><i
-                        class="fa fa-th-large"></i></a>
-            </li>
-            <li class="nav-item" style="box-shadow: white;">
-                <div class="dropdown">
-                    <a class="btn btn-default dropdown-toggle" style="border-color: white; background-color: white; box-shadow: white;" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img src="../static/favicon.ico" width="25" height="25" style="margin-bottom: 5px;">
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </div>
-            </li>
+            <!-- Skin Menu -->
+            <div th:replace="model/topper :: topper-skin"></div>
+            <!-- User profile           -->
+            <div th:replace="model/topper :: topper-user"></div>
         </ul>
     </nav>
     <!-- /.navbar -->
@@ -99,7 +70,6 @@
         </div>
         <!-- /.sidebar -->
     </aside>
-
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
