--- a/src/main/resources/templates/model/topper.html
+++ b/src/main/resources/templates/model/topper.html
@@ -1,18 +1,27 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="topper-user" >
     <!-- Split button -->
-    <div class="btn-group">
-        <button type="button" class="btn btn-default" th:text="${session.username}"></button>
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="caret"></span>
-            <span class="sr-only">Toggle Dropdown</span>
-        </button>
-        <ul class="dropdown-menu">
-            <li><a href="/logout">退出系统</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="/index">修改信息</a></li>
-        </ul>
-    </div>
+    <li class="nav-item" style="box-shadow: white;">
+        <div class="dropdown">
+            <a class="btn btn-default dropdown-toggle" style="border-color: white; background-color: white; box-shadow: white;" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <img th:src="@{/images/admin.png}" width="25" height="25" style="margin-bottom: 5px;">
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                <a class="dropdown-item" href="#">个人中心</a>
+                <a class="dropdown-item" href="#">设置</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="/logout">退出</a>
+            </div>
+        </div>
+    </li>
+</div>
+
+<div th:fragment="topper-skin">
+    <li class="nav-item">
+        <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#">
+            <i class="fa fa-th-large"></i>
+        </a>
+    </li>
 </div>
 
 <div th:fragment="topper-info">
