--- a/src/main/resources/templates/documents/standard.html
+++ b/src/main/resources/templates/documents/standard.html
@@ -149,7 +149,7 @@
                       <div class="col-11">
                         <p style="padding-left: 10px;">
                           <span style="float: left;">2018-03-24 07:15</span>
-                          <a style="float: right;" href="/documents/details"> 详情>> </a>
+                          <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
                         </p>
                       </div>
                     </div>                  </div>
@@ -162,7 +162,7 @@
                       <div class="col-11">
                         <p style="padding-left: 10px;">
                           <span style="float: left;">2018-03-24 07:15</span>
-                          <a style="float: right;" href="/documents/details"> 详情>> </a>
+                          <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
                         </p>
                       </div>
                     </div>
@@ -176,7 +176,7 @@
                       <div class="col-11">
                         <p style="padding-left: 10px;">
                           <span style="float: left;">2018-03-24 07:15</span>
-                          <a style="float: right;" href="/documents/details"> 详情>> </a>
+                          <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
                         </p>
                       </div>
                     </div>
@@ -190,7 +190,7 @@
                       <div class="col-11">
                         <p style="padding-left: 10px;">
                           <span style="float: left;">2018-03-24 07:15</span>
-                          <a style="float: right;" href="/documents/details"> 详情>> </a>
+                          <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
                         </p>
                       </div>
                     </div>
