--- a/src/main/resources/templates/base/cinema/insert.html
+++ b/src/main/resources/templates/base/cinema/insert.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>影院信息检索</title>
+  <title>影院基础信息管理</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
@@ -20,72 +20,71 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
 <body class="hold-transition sidebar-mini">
-<div class="wrapper">
-  <!-- Navbar -->
-  <nav class="main-header navbar navbar-expand bg-white navbar-light border-bottom">
-    <!-- Left navbar links -->
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" data-widget="pushmenu" href="#"><i class="fa fa-bars"></i></a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="/index" class="nav-link">主页</a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="#" class="nav-link"></a>
-      </li>
-    </ul>
-    <!-- Right navbar links -->
-    <ul class="navbar-nav ml-auto">
-      <!-- Messages Dropdown Menu -->
-      <div th:replace="model/topper :: topper-info"></div>
-      <!-- Notifications Dropdown Menu -->
-      <div th:replace="model/topper :: topper-notice"></div>
-      <!-- Skin Menu -->
-      <div th:replace="model/topper :: topper-skin"></div>
-      <!-- User profile           -->
-      <div th:replace="model/topper :: topper-user"></div>
-    </ul>
-  </nav>
-  <!-- /.navbar -->
-
-  <!-- Main Sidebar Container -->
-	<aside class="main-sidebar sidebar-dark-primary elevation-4">
-		<!-- Brand Logo -->
-		<div th:replace="model/left :: left-logo"></div>
-		<!-- Sidebar -->
-		<div class="sidebar">
-			<!-- Sidebar user panel (optional) -->
-			<div th:replace="model/left :: left-nav-client"></div>
-			<!-- Sidebar Menu -->
-			<div th:replace="model/left :: left-nav"></div>
-			<!-- /.sidebar-menu -->
-		</div>
-		<!-- /.sidebar -->
-	</aside>
-	<!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-      <div class="container-fluid">
-        <div class="row mb-2">
-          <div class="col-sm-6">
-            <h1>影院基础信息管理</h1>
-          </div>
-          <div class="col-sm-6">
-            <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">主页</a></li>
-              <li class="breadcrumb-item active">影院基础信息管理</li>
-            </ol>
-          </div>
+  <div class="wrapper">
+    <!-- Navbar -->
+    <nav class="main-header navbar navbar-expand bg-white navbar-light border-bottom">
+      <!-- Left navbar links -->
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" data-widget="pushmenu" href="#"><i class="fa fa-bars"></i></a>
+        </li>
+        <li class="nav-item d-none d-sm-inline-block">
+          <a href="/index" class="nav-link">主页</a>
+        </li>
+        <li class="nav-item d-none d-sm-inline-block">
+          <a href="#" class="nav-link"></a>
+        </li>
+      </ul>
+      <!-- Right navbar links -->
+      <ul class="navbar-nav ml-auto">
+        <!-- Messages Dropdown Menu -->
+        <div th:replace="model/topper :: topper-info"></div>
+        <!-- Notifications Dropdown Menu -->
+        <div th:replace="model/topper :: topper-notice"></div>
+        <!-- Skin Menu -->
+        <div th:replace="model/topper :: topper-skin"></div>
+        <!-- User profile           -->
+        <div th:replace="model/topper :: topper-user"></div>
+      </ul>
+    </nav>
+    <!-- /.navbar -->
+    <!-- Main Sidebar Container -->
+    <aside class="main-sidebar sidebar-dark-primary elevation-4">
+        <!-- Brand Logo -->
+        <div th:replace="model/left :: left-logo"></div>
+        <!-- Sidebar -->
+        <div class="sidebar">
+            <!-- Sidebar user panel (optional) -->
+            <div th:replace="model/left :: left-nav-client"></div>
+            <!-- Sidebar Menu -->
+            <div th:replace="model/left :: left-nav"></div>
+            <!-- /.sidebar-menu -->
         </div>
-      </div><!-- /.container-fluid -->
-    </section>
-    <!-- Main content -->
-    <section class="content">
-      <div class="row">
-        <div class="col-12">
-		<div class="card card-primary">
+        <!-- /.sidebar -->
+    </aside>
+      <!-- Content Wrapper. Contains page content -->
+    <div class="content-wrapper">
+      <!-- Content Header (Page header) -->
+      <section class="content-header">
+        <div class="container-fluid">
+          <div class="row mb-2">
+            <div class="col-sm-6">
+              <h1>影院基础信息管理</h1>
+            </div>
+            <div class="col-sm-6">
+              <ol class="breadcrumb float-sm-right">
+                <li class="breadcrumb-item"><a href="#">主页</a></li>
+                <li class="breadcrumb-item active">影院基础信息管理</li>
+              </ol>
+            </div>
+          </div>
+        </div><!-- /.container-fluid -->
+      </section>
+      <!-- Main content -->
+      <section class="content">
+        <div class="row">
+          <div class="col-12">
+            <div class="card card-primary">
               <div class="card-header">
                 <h3 class="card-title">请输入影院基础信息</h3>
               </div>
@@ -140,35 +139,29 @@
                       </div>
                     </div>
                   </div>
-					<!-- /.card-body -->
+                    <!-- /.card-body -->
                   <div class="form-group">
-					<div class="card-footer">
+                    <div class="card-footer">
                       <div class="row float-lg-right">
                         <button type="submit" class="btn btn-primary">添加</button>
                       </div>
-                	</div>
+                    </div>
                   </div>
-				</div>
+                </div>
               </form>
-		    </div>
-          <!-- /.card -->
+            </div>
+            <!-- /.card -->
+          </div>
+            <!-- /.card -->
         </div>
-          <!-- /.card -->
-        </div>
-        <!-- /.col -->
-    </section>
-  </div>
-      <!-- /.row -->
-    <!-- /.content -->
+          <!-- /.col -->
+      </section>
+    </div>
+        <!-- /.row -->
+      <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
-	<div th:replace="/model/footer :: footer-and-right"></div>
-  <!-- Control Sidebar -->
-  <aside class="control-sidebar control-sidebar-dark">
-    <!-- Control sidebar content goes here -->
-  </aside>
-  <!-- /.control-sidebar -->
-</div>
+  <div th:replace="/model/footer :: footer-and-right"></div>
 <!-- ./wrapper -->
 
 <!-- jQuery -->
