--- a/src/main/resources/templates/documents/stand_details.html
+++ b/src/main/resources/templates/documents/stand_details.html
@@ -92,90 +92,135 @@
               <!-- title row -->
               <div class="row">
                 <div class="col-12">
+                  <h5>
+                    <i class="fa fa-globe"></i> 数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法
+                    <small class="float-right">更新时间: 2/8/2019</small>
+                  </h5>
+                </div>
+                <!-- /.col -->
+              </div>
+              <!-- info row -->
+              <div class="row invoice-info">
+                <div class="row col-sm-9">
+                  <div class="col-sm-6 invoice-col">
+                    <address>
+                      <br/>
+                      <strong>标准类型: </strong>
+                      <br>国家标准<br>
+                    </address>
+                  </div>
+                  <div class="col-sm-3 invoice-col">
+                    <address>
+                      <br/>
+                      <strong>标准编号: </strong>
+                      <br>GY/T 248-2011<br>
+                    </address>
+                  </div>
+                  <div class="row col-sm-12">
+                    <div class="col-sm-6 row">
+                      <!-- /.col -->
+                      <div class="col-sm-9 invoice-col">
+                        <address>
+                          <strong>主要内容：</strong><br>
+                          规定了数字电影中档和流动放映系统用声频功率放大器的技术要求和测量方法。对于能够确保同样测量不确定度的任何等效测量方法也可以采用。有争议时，应以本标准为准。
+                        </address>
+                      </div>
+                      <!-- /.col -->
+                      <div class="col-sm-9 invoice-col">
+                        <address>
+<!--                          <strong>放映主管：</strong><br>-->
+<!--                          李四<br>-->
+<!--                          联系电话: 13000000000<br>-->
+<!--                          电子邮箱: tom.doe@example.com-->
+                        </address>
+                      </div>
+                      <!-- /.col -->
+                    </div>
+                    <div class="col-sm-6 row">
+                      <!-- /.col -->
+                      <div class="col-sm-9 invoice-col">
+                        <address>
+                          <strong>适用范围：</strong><br>
+                          适用于数字电影中档和流动放映系统的声频功率放大器的应用和检测。
+                        </address>
+                      </div>
+                      <!-- /.col -->
+                      <div class="col-sm-9 invoice-col">
+                        <address>
+<!--                          <strong>放映主管：</strong><br>-->
+<!--                          李四<br>-->
+<!--                          联系电话: 13000000000<br>-->
+<!--                          电子邮箱: tom.doe@example.com-->
+                        </address>
+                      </div>
+                      <!-- /.col -->
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-3">
+                  <div class="row">
+                    <img src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg">
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="invoice p-3 mb-3">
+              <!-- title row -->
+              <div class="row">
+                <div class="col-12">
                   <h4>
-                    
+                    <small class="float-left">数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法</small>
                     <small class="float-right">更新时间: 2/8/2019</small>
                   </h4>
                 </div>
                 <!-- /.col -->
               </div>
               <!-- info row -->
+              <div class="row form-group col-sm-12">&nbsp;</div>
+
               <div class="row invoice-info">
-                <div class="col-sm-4 invoice-col">
-                  <strong>设备品牌及类型：</strong>
-                
-                    <br> BARCO DP2K <br>
+
+                <div class="col-sm-6 invoice-col">
+                  <strong>标准项目名称：</strong>
+                    <br>数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法 <br>
                   <address>
                   </address>
-				  
                 </div>
                 <!-- /.col -->
-                <div class="col-sm-4 invoice-col">
+                <div class="col-sm-3 invoice-col">
                   <address>
-					<strong>故障代码及说明：</strong>
-                    <br>Code 5004: “lamp - no communication” (Error)<br>
+					<strong>标准编号：</strong>
+                    <br>GY/T 248-2011<br>
                   </address>
                 </div>
-				<div class="col-sm-4 invoice-col">
-                  <address>
-					<strong>故障级别：</strong>
-                    <br>错误<br>
-                  </address>
+                <div class="col-sm-3 invoice-col">
+                  <img src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg" >
                 </div>
                 <!-- /.col -->
               </div>
-              <!-- /.row -->
-           <address></address>
-              <!-- Table row -->
-              <div class="row">
-				  <div class="col-6 table-responsive">
-					  <div >
-						  <h4>&nbsp&nbsp&nbsp解决方法：</h4>
-					  </div>
-                  	<table class="table table-striped">
-                    <thead>
-                    <tr>
-                      <th>状态</th>
-                      <th>解决方法</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                      <td>灯箱没有被正确安装</td>
-                      <td>检查灯箱安装，并重置灯箱</td>
-
-                    </tr>
-                    <tr>
-                      <td>使用了与本机型号不匹配的灯箱</td>
-                      <td>选择匹配灯箱</td>
-
-                    </tr>
-                    <tr>
-                      <td>同时显示代码5180（lamp house - not connected）</td>
-                      <td>见5180</td>
-
-                    </tr>
-                    <tr>
-                      <td>与灯箱无通讯</td>
-                      <td>检查灯箱前端蓝色插头是否损坏</td>
-
-                    </tr>
-                    </tbody>
-                  </table>
-				  </div>
-				  <div class="col-6 table-responsive">
-					<h4>&nbsp&nbsp&nbsp操作视频：</h4>
-						&nbsp&nbsp&nbsp视频加载中...
-				  </div>
-                <!-- /.col -->
+              <div class="row invoice-info">
+                <div class="col-sm-6 invoice-col">
+                  <address>
+                    <strong>主要内容：</strong>
+                    <br>规定了数字电影中档和流动放映系统用声频功率放大器的技术要求和测量方法。对于能够确保同样测量不确定度的任何等效测量方法也可以采用。有争议时，应以本标准为准。<br>
+                  </address>
+                </div>
+                <div class="col-sm-3 invoice-col">
+                  <address>
+                    <strong>适用范围：</strong>
+                    <br>适用于数字电影中档和流动放映系统的声频功率放大器的应用和检测。<br>
+                  </address>
+                </div>
               </div>
               <!-- /.row -->
-              <!-- Table row -->
+              <address></address>
               </div>
             </div>
             <!-- /.invoice -->
           </div><!-- /.col -->
         </div><!-- /.row -->
+    </section>
       </div><!-- /.container-fluid -->
     </section>
     <!-- /.content -->
