--- a/src/main/resources/templates/model/left.html
+++ b/src/main/resources/templates/model/left.html
@@ -200,11 +200,11 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="/statistic_analysis" class="nav-link">
                 <i class="nav-icon fa fa-pie-chart"></i>
                 <p>
                     业务统计分析
-                    <i class="right fa fa-angle-left"></i>
+<!--                    <i class="right fa fa-angle-left"></i>-->
                 </p>
             </a>
 <!--            <ul class="nav nav-treeview">-->
@@ -238,7 +238,7 @@
             </a>
             <ul class="nav nav-treeview">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="/question/question" class="nav-link">
                         <i class="fa fa-edit nav-icon"></i>
                         <p>答题管理</p>
                     </a>
