add task function

--- a/src/main/resources/templates/calendar_manage.html
+++ b/src/main/resources/templates/calendar_manage.html
@@ -35,110 +35,16 @@
       </li>
     </ul>
 
-    <!-- SEARCH FORM -->
-    <form class="form-inline ml-3">
-      <div class="input-group input-group-sm">
-        <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-        <div class="input-group-append">
-          <button class="btn btn-navbar" type="submit">
-            <i class="fa fa-search"></i>
-          </button>
-        </div>
-      </div>
-    </form>
-
     <!-- Right navbar links -->
     <ul class="navbar-nav ml-auto">
       <!-- Messages Dropdown Menu -->
-      <li class="nav-item dropdown">
-        <a class="nav-link" data-toggle="dropdown" href="#">
-          <i class="fa fa-comments-o"></i>
-          <span class="badge badge-danger navbar-badge">3</span>
-        </a>
-        <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-          <a href="#" class="dropdown-item">
-            <!-- Message Start -->
-            <div class="media">
-              <img src="dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
-              <div class="media-body">
-                <h3 class="dropdown-item-title">
-                  Brad Diesel
-                  <span class="float-right text-sm text-danger"><i class="fa fa-star"></i></span>
-                </h3>
-                <p class="text-sm">Call me whenever you can...</p>
-                <p class="text-sm text-muted"><i class="fa fa-clock-o mr-1"></i> 4 Hours Ago</p>
-              </div>
-            </div>
-            <!-- Message End -->
-          </a>
-          <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item">
-            <!-- Message Start -->
-            <div class="media">
-              <img src="dist/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
-              <div class="media-body">
-                <h3 class="dropdown-item-title">
-                  John Pierce
-                  <span class="float-right text-sm text-muted"><i class="fa fa-star"></i></span>
-                </h3>
-                <p class="text-sm">I got your message bro</p>
-                <p class="text-sm text-muted"><i class="fa fa-clock-o mr-1"></i> 4 Hours Ago</p>
-              </div>
-            </div>
-            <!-- Message End -->
-          </a>
-          <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item">
-            <!-- Message Start -->
-            <div class="media">
-              <img src="dist/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
-              <div class="media-body">
-                <h3 class="dropdown-item-title">
-                  Nora Silvester
-                  <span class="float-right text-sm text-warning"><i class="fa fa-star"></i></span>
-                </h3>
-                <p class="text-sm">The subject goes here</p>
-                <p class="text-sm text-muted"><i class="fa fa-clock-o mr-1"></i> 4 Hours Ago</p>
-              </div>
-            </div>
-            <!-- Message End -->
-          </a>
-          <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item dropdown-footer">See All Messages</a>
-        </div>
-      </li>
+      <div th:replace="model/topper :: topper-info"></div>
       <!-- Notifications Dropdown Menu -->
-      <li class="nav-item dropdown">
-        <a class="nav-link" data-toggle="dropdown" href="#">
-          <i class="fa fa-bell-o"></i>
-          <span class="badge badge-warning navbar-badge">15</span>
-        </a>
-        <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-          <span class="dropdown-item dropdown-header">15 Notifications</span>
-          <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item">
-            <i class="fa fa-envelope mr-2"></i> 4 new messages
-            <span class="float-right text-muted text-sm">3 mins</span>
-          </a>
-          <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item">
-            <i class="fa fa-users mr-2"></i> 8 friend requests
-            <span class="float-right text-muted text-sm">12 hours</span>
-          </a>
-          <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item">
-            <i class="fa fa-file mr-2"></i> 3 new reports
-            <span class="float-right text-muted text-sm">2 days</span>
-          </a>
-          <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#">
-          <i class="fa fa-th-large"></i>
-        </a>
-      </li>
+      <div th:replace="model/topper :: topper-notice"></div>
+      <!-- Skin Menu -->
+      <div th:replace="model/topper :: topper-skin"></div>
+      <!-- User profile           -->
+      <div th:replace="model/topper :: topper-user"></div>
     </ul>
   </nav>
   <!-- /.navbar -->
@@ -167,7 +73,6 @@
           <div class="col-sm-6">
             <h1>日常工作管理</h1>
           </div>
-
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="#">主页</a></li>
@@ -190,11 +95,6 @@
               <div class="card-body">
                 <!-- the events -->
                 <div id="external-events">
-                  <!--                  <div class="external-event bg-success">故障（已处理）</div>-->
-                  <!--				  <div class="external-event bg-info">日常维护（已完成）</div>-->
-                  <!--                  <div class="external-event bg-warning">日常维护（未完成）</div>-->
-                  <!--                  &lt;!&ndash;<div class="external-event bg-primary">较重要事件</div>&ndash;&gt;-->
-                  <!--                  <div class="external-event bg-danger">故障提醒</div>-->
                 </div>
               </div>
               <!-- /.card-body -->
@@ -216,14 +116,24 @@
                 <!--                <div class="input-group">-->
                 <input id="new-event-title" type="text" class="form-control" placeholder="事件标题">
                 <br>
-                <textarea id="new-event-detail" class="form-control" placeholder="请输入相关事件信息" rows="10" cols="5"></textarea>
-                <br>请选择相关负责人
-                <select class="form-control">
-                  <option value="Hello">维修人员1</option>
-                  <option value="world">维修人员2</option>
-                  <option value="world">维护人员1</option>
-                  <option value="world">维护人员2</option>
+                <textarea id="new-event-detail" class="form-control" placeholder="请输入相关事件信息" rows="5" cols="5"></textarea>
+                <br>任务所在设备
+                <select  id="new-event-equipment" class="form-control">
+                  <option value="server">服务器</option>
+                  <option value="machine">放映机</option>
+                  <option value="voice">音响</option>
                 </select>
+                <br>请选择相关负责人
+                <select  id="new-event-staff" class="form-control">
+                  <option value="维修人员1">维修人员1</option>
+                  <option value="维修人员乙">维修人员乙</option>
+                  <option value="维修人员3">维修人员3</option>
+                  <option value="维护人员3">维护人员3</option>
+                </select>
+                <br>请选择开始时间：
+                <input id="new-event-start-time" type="time" class="form-control">
+                <br>请选择结束时间：
+                <input id="new-event-end-time" type="time" class="form-control">
                 <br>
                 <div class="input-group-append">
                   <button id="add-new-event" type="button" class="btn btn-warning btn-flat">添加</button>
@@ -252,6 +162,7 @@
     </section>
     <!-- /.content -->
   </div>
+
   <!-- /.content-wrapper -->
 
 <!--	<div class="modal-dialog">-->
@@ -291,13 +202,26 @@
 
     /* initialize the external events
      -----------------------------------------------------------------*/
-    function ini_events(ele) {
+    var storedEvents=null
+    $.get("http://localhost:8084",function (data,status) {
+              console.log(data+"---"+status)
+              storedEvents=data
+            }
+    )
+    console.log("RESPONSE:"+storedEvents)
+
+    function ini_events(ele,information,person,startTime,endTime,equipment) {
       ele.each(function () {
 
         // create an Event Object (http://arshaw.com/fullcalendar/docs/event_data/Event_Object/)
         // it doesn't need to have a start or end
         var eventObject = {
-          title: $.trim($(this).text()) // use the element's text as the event title
+          title: $.trim($(this).text()),// use the element's text as the event title
+          detail:information,
+          start_time:startTime,
+          end_time:endTime,
+          staff:person,
+          equipment: equipment
         }
         // re the Event Object in the DOM element so we can get to it later
         $(this).data('eventObject', eventObject)
@@ -311,12 +235,11 @@
 
       })
     }
-
     ini_events($('#external-events div.external-event'))
-
     /* initialize the calendar
      -----------------------------------------------------------------*/
     //Date for the calendar events (dummy data)
+
     var date = new Date()
     var d    = date.getDate(),
             m    = date.getMonth(),
@@ -381,30 +304,50 @@
 
         // retrieve the dropped element's stored Event Object
         var originalEventObject = $(this).data('eventObject')
-
+        console.log(originalEventObject)
         // we need to copy it, so that multiple events don't have a reference to the same object
         var copiedEventObject = $.extend({}, originalEventObject)
+        console.log(copiedEventObject)
 
 
         // assign it the date that was reported
-        copiedEventObject.start           = date
-        copiedEventObject.allDay          = allDay
+        copiedEventObject.start = date
+        copiedEventObject.allDay          = false
         copiedEventObject.backgroundColor = $(this).css('background-color')
         copiedEventObject.borderColor     = $(this).css('border-color')
+
+        console.log(date._d)
+        Dialog({
+          title: "确认信息",
+          content: ""+date._d+"---"+copiedEventObject.title+"--"+copiedEventObject.start_time+"---"+copiedEventObject.end_time+"---"+copiedEventObject.detail+"---"+copiedEventObject.backgroundColor+"---"+copiedEventObject.equipment,
+          ok:{
+            callback: function () {
+              $.post("http://localhost:8084/post_task",
+                      {
+                        title:copiedEventObject.title,
+                        detail:copiedEventObject.detail,
+                        start_time: copiedEventObject.start_time,
+                        end_time: copiedEventObject.end_time,
+                        date:date._d,
+                        staff:copiedEventObject.staff,
+                        equipment: copiedEventObject.equipment,
+                        color:copiedEventObject.backgroundColor,
+                      },
+                      function(data,status) {
+                        console.log(status)
+                      },"json")
+            }
+          }
+        });
         $('#calendar').fullCalendar('renderEvent', copiedEventObject, true)
-        // is the "remove after drop" checkbox checked?
-        if (!$('#drop-remove').is(':checked')) {
-          // if so, remove the element from the "Draggable Events" list
-          $(this).remove()
-        }
 
       }
     })
 
     /* ADDING EVENTS */
-    var currColor = '#f39c12' //Red by default
+    let currColor = '#f39c12' //by default
     //Color chooser button
-    var colorChooser = $('#color-chooser-btn')
+    let colorChooser = $('#color-chooser-btn')
     $('#color-chooser > li > a').click(function (e) {
       e.preventDefault()
       //Save color
@@ -418,10 +361,16 @@
     $('#add-new-event').click(function (e) {
       e.preventDefault()
       //Get value and make sure it is not null
-      var name = $('#new-event-title').val()
+      let name = $('#new-event-title').val()
+      let detail=$('#new-event-detail').val()
+      let staff=$('#new-event-staff').val()
+      let start_time=$('#new-event-start-time').val()
+      let end_time=$('#new-event-end-time').val()
+      let equipment=$("#new-event-equipment").val()
       if (name.length == 0) {
         return
       }
+
 
 
       //Create events
@@ -432,17 +381,22 @@
         'color'           : '#fff'
       }).addClass('external-event')
       event.html(name)
+      //console.log(name+"--"+detail+'--'+staff+'--'+'--'+start_time+'--'+end_time)
 
       $('#external-events').prepend(event)
+      ini_events(event,detail,staff,start_time,end_time,equipment)
 
-      //Add draggable funtionality
-      ini_events(event)
       //Remove event from text input
       $('#new-event-title').val('')
       $('#new-event-detail').val('')
+      $('#new-event-staff').val('')
+      $('#new-event-start-time').val('')
+      $('#new-event-end-time').val('')
+      $('#new-event-equipment').val('')
 
     })
   })
 </script>
+
 </body>
 </html>
