--- a/src/main/resources/templates/question/details.html
+++ b/src/main/resources/templates/question/details.html
@@ -103,13 +103,14 @@
               <!-- info row -->
               <div class="row invoice-info">
                 <div class="col-sm-6">
-                  <div class="col-sm-6 invoice-col">
+                  <div class="col-sm-12 invoice-col">
                     <form action="" method="get">
                       <h5>您最喜欢水果？</h5><br/>
-                      <label class="form-check-label"><input name="Fruit" type="radio" value="" /> A 苹果 </label><br/><br/>
-                      <label class="form-check-label"><input name="Fruit" type="radio" value="" /> B 桃子 </label><br /><br/>
-                      <label class="form-check-label"><input name="Fruit" type="radio" value="" /> C 香蕉 </label><br /><br/>
-                      <label class="form-check-label"><input name="Fruit" type="radio" value="" /> D 梨 </label><br /><br/>
+                      <label class="form-check-label"><input name="Fruit" type="radio" value="1" /> A 苹果 </label><br/><br/>
+                      <label class="form-check-label"><input name="Fruit" type="radio" value="2" /> B 桃子 </label><br /><br/>
+                      <label class="form-check-label"><input name="Fruit" type="radio" value="3" /> C 香蕉 </label><br /><br/>
+                      <label class="form-check-label"><input name="Fruit" type="radio" value="4" /> D 梨 </label><br /><br/>
+                      <button type="submit" class="btn btn-info">提交答案</button>
                     </form>
                     <div class="row form-group">
                       <div class="col-sm-6">
@@ -132,7 +133,6 @@
                         <strong>相关资源: </strong>
                         <br>GY HYT-126837<br>
                       </address>
-
                     </div>
                   </div>
                 </div>
