--- a/src/main/resources/templates/details_room-1.html
+++ b/src/main/resources/templates/details_room-1.html
@@ -7,21 +7,13 @@
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
-  <link rel="stylesheet" th:href="@{/plugins/font-awesome/css/font-awesome.min.css}">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" th:href="@{/dist/css/adminlte.min.css}">
 	<!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-  <style>
-    #canvas{
-      cursor: grab;
-    }
-    #canvas:focus{
-      cursor: grabbing;
-    }
-  </style>
 </head>
 <body class="hold-transition sidebar-mini">
 <div class="wrapper">
@@ -269,12 +261,7 @@
                     <div class="col-sm-6">
                       <h5>北京XXXX影院 第 2 影厅 布局平面图</h5>
                     </div>
-<!--                    <img class="img-fluid" alt="photo" width="55%" th:src="@{/dist/img/WechatIMG269.jpeg}">-->
-                    <div id="father">
-                      <div id="box">
-                        <canvas id="canvas" width="400px" height="450px"></canvas>
-                      </div>
-                    </div>
+                    <img class="img-fluid" alt="photo" width="55%" th:src="@{/dist/img/WechatIMG269.jpeg}">
                   </div>
                 </div>
               </div>
@@ -772,81 +759,6 @@
 </div>
 <!-- ./wrapper -->
 
-<script type="text/javascript">
-  var canvas = document.getElementById("canvas");
-  var minvaluex;
-  var minvaluey;
-
-  imageToCanvas(canvas,0,0);
-  function imageToCanvas(canvas,x,y) {
-    var img = new Image();
-    img.src = "/dist/img/WechatIMG269.jpeg";
-    minvaluex = canvas.width - img.width;
-    minvaluey = canvas.height - img.height;
-    img.onload = function(){
-      var ctx = canvas.getContext("2d");
-      ctx.drawImage(img,x,y);
-      console.log(img.width + ":" + img.height);
-    }
-  }
-
-  // box是装图片的容器,fa是图片移动缩放的范围
-  var box = document.getElementById("box");
-  var fa = document.getElementById('father');
-  var scale = document.getElementById("scale");
-
-  var moveX = 0;
-  var moveY = 0;
-  // 图片移动效果
-  box.onmousedown=function(ev) {
-    var oEvent = ev;
-    // 浏览器有一些图片的默认事件,这里要阻止
-    oEvent.preventDefault();
-    var beforeX = oEvent.clientX;
-    var beforeY = oEvent.clientY;
-    var afterX;
-    var afterY;
-
-    fa.onmousemove=function (ev) {
-      oEvent = ev;
-      oEvent.preventDefault();
-      afterX = oEvent.clientX;
-      afterY = oEvent.clientY;
-      var x = moveX+afterX-beforeX;
-      var y = moveY+afterY-beforeY;
-      // 图形移动的边界判断
-      x = x < minvaluex ? minvaluex : x;
-      x = x > 0 ? 0 : x;
-      y = y < minvaluey ? minvaluey : y;
-      y = y > 0 ? 0 : y;
-      imageToCanvas(canvas,x,y);
-    };
-    // 图形移出父盒子取消移动事件,防止移动过快触发鼠标移出事件,导致鼠标弹起事件失效
-    fa.onmouseleave = function () {
-      fa.onmousemove=null;
-      fa.onmouseup=null;
-      moveX += afterX-beforeX;
-      moveY += afterY-beforeY;
-      moveX = moveX < minvaluex ? minvaluex : moveX;
-      moveX = moveX > 0 ? 0 : moveX;
-      moveY = moveY < minvaluey ? minvaluey : moveY;
-      moveY = moveY > 0 ? 0 : moveY;
-      imageToCanvas(canvas,moveX,moveY);
-    };
-    // 鼠标弹起后停止移动
-    fa.onmouseup=function() {
-      fa.onmousemove=null;
-      fa.onmouseup=null;
-      moveX += afterX-beforeX;
-      moveY += afterY-beforeY;
-      moveX = moveX < minvaluex ? minvaluex : moveX;
-      moveX = moveX > 0 ? 0 : moveX;
-      moveY = moveY < minvaluey ? minvaluey : moveY;
-      moveY = moveY > 0 ? 0 : moveY;
-      imageToCanvas(canvas,moveX,moveY);
-    }
-  }
-</script>
 <!-- jQuery -->
 <script th:src="@{/plugins/jquery/jquery.min.js}"></script>
 <!-- Bootstrap 4 -->
