--- a/src/main/resources/templates/calendar_manage.html
+++ b/src/main/resources/templates/calendar_manage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>影院放映质量管理信息系统 | 日常工作管理</title>
+  <title>日常工作管理</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
